--- a/project.lib/capa negocio/capa_negocio.csproj
+++ b/project.lib/capa negocio/capa_negocio.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>capa_negocio</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\capa datos\capa_datos.csproj" />
+  </ItemGroup>
+
 </Project>
