cambios capa UI

--- a/project.lib/test-project.lib/Capa_UI.csproj
+++ b/project.lib/test-project.lib/Capa_UI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -18,6 +18,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\capa negocio\CAPA_NEGOCIO.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Pages\Catalogos\" />
   </ItemGroup>
 
 </Project>
